--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
       </intent-filter>
       <intent-filter>
         <action android:name="com.tigeroakes.cellwallclient.LOGIN" />
-
+        <category android:name="android.intent.category.DEFAULT" />
         <data android:scheme="http" />
         <data android:scheme="https" />
       </intent-filter>
