--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,8 +68,9 @@ dependencies {
 
   implementation "com.google.protobuf:protobuf-javalite:3.10.0"
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-  testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-core:2.24.5'
 
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
