--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
         <category android:name="android.intent.category.DEFAULT" />
         <data android:scheme="cellwall" />
+        <data android:scheme="http" />
+        <data android:scheme="https" />
       </intent-filter>
     </activity>
   </application>
