--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,16 +61,15 @@ dependencies {
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
 
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.core:core-ktx:1.3.2'
+  implementation 'androidx.core:core-ktx:1.5.0-alpha04'
   implementation "androidx.datastore:datastore-core:$datastore_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
   implementation "com.google.protobuf:protobuf-javalite:3.10.0"
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-core:2.24.5'
 
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
