--- a/javascript/deploy/package.json
+++ b/javascript/deploy/package.json
@@ -7,13 +7,14 @@
     "build": "rollup -c",
     "pm2": "pm2 start --name cell-wall npm -- start",
     "format": "prettier *.json --write",
-    "start": "fastify start dist/cell-wall.js --address 0.0.0.0"
+    "start": "fastify start dist/cell-wall.js --address 0.0.0.0 --log-level info"
   },
   "dependencies": {
     "appium-adb": "^8.7.3",
     "fastify": "^3.7.0",
     "fastify-cli": "^2.5.1",
     "fastify-formbody": "^5.0.0",
+    "fastify-static": "^3.3.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
@@ -23,9 +24,11 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.1",
+    "rollup-plugin-copy": "^3.3.0",
     "typescript": "4.1.0-beta"
   },
   "files": [
-    "src"
+    "assets",
+    "dist"
   ]
 }
