--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -17,6 +17,7 @@
     "@cell-wall/iterators": "*",
     "fastify": "^3.7.0",
     "fastify-formbody": "^5.0.0",
+    "fastify-static": "^3.3.0",
     "socket.io": "^2.3.0",
     "tslib": "^2.0.1"
   },
@@ -29,6 +30,7 @@
     "typescript": "4.1.0-beta"
   },
   "files": [
+    "assets",
     "src"
   ],
   "ava": {
