--- a/javascript/deploy/package.json
+++ b/javascript/deploy/package.json
@@ -3,32 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "main": "dist/cell-wall.js",
+  "bin": {
+    "cell-wall-bundle": "src/bin/bundle.js",
+    "cell-wall-package": "src/bin/package.js"
+  },
   "scripts": {
-    "build": "rollup -c",
-    "pm2": "pm2 start --name cell-wall npm -- start",
-    "format": "prettier *.json --write",
-    "start": "fastify start dist/cell-wall.js --address 0.0.0.0 --log-level info"
+    "build": "tsc --build src",
+    "format": "prettier *.json --write"
   },
   "dependencies": {
-    "appium-adb": "^8.7.3",
-    "fastify": "^3.7.0",
-    "fastify-cli": "^2.5.1",
-    "fastify-formbody": "^5.0.0",
-    "fastify-static": "^3.3.0",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "@cell-wall/server": "*",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.1",
-    "rollup-plugin-copy": "^3.3.0",
-    "typescript": "4.1.0-beta"
+    "typescript": "4.1.0-beta",
+    "yargs-parser": "^20.2.3"
   },
   "files": [
-    "assets",
-    "dist"
+    "src"
   ]
 }
