--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,11 +62,10 @@ dependencies {
 
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.core:core-ktx:1.5.0-alpha04'
-  implementation "androidx.datastore:datastore-core:$datastore_version"
+  implementation "androidx.datastore:datastore-preferences:$datastore_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
-  implementation "com.google.protobuf:protobuf-javalite:3.10.0"
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
   testImplementation 'junit:junit:4.12'
