--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'kotlin-android'
   id 'kotlin-android-extensions'
   id "androidx.navigation.safeargs.kotlin"
-  id "com.google.protobuf" version "0.8.12"
+  id "com.getkeepsafe.dexcount" version "2.0.0"
 }
 
 android {
@@ -12,13 +12,17 @@ android {
     applicationId "com.tigeroakes.cellwallclient"
     minSdkVersion 19
     targetSdkVersion 30
-    versionCode 1
-    versionName "1.0"
+    versionCode 2
+    versionName "2.0"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
+    debug {
+      minifyEnabled true
+    }
     release {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
@@ -31,46 +35,32 @@ android {
   }
   kotlinOptions {
     jvmTarget = '1.8'
+    freeCompilerArgs += "-Xopt-in=org.mylibrary.OptInAnnotation"
   }
 }
-
-protobuf {
-  protoc {
-    artifact = "com.google.protobuf:protoc:3.10.0"
-  }
-
-  // Generates the java Protobuf-lite code for the Protobufs in this project. See
-  // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
-  // for more information.
-  generateProtoTasks {
-    all().each { task ->
-      task.builtins {
-        java {
-          option 'lite'
-        }
-      }
-    }
-  }
-}
-
 
 dependencies {
-  implementation 'com.google.android.material:material:1.2.1'
+  implementation "com.google.android.material:material:1.2.1"
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.core:core-ktx:1.5.0-alpha04'
-  implementation "androidx.datastore:datastore-preferences:$datastore_version"
+  implementation "androidx.appcompat:appcompat:1.2.0"
+  implementation "androidx.core:core-ktx:1.5.0-alpha04"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
-  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation "com.github.tfcporciuncula.flow-preferences:flow-preferences:1.3.3"
+  implementation "com.squareup.retrofit2:retrofit:2.9.0"
+  implementation "com.tinder.scarlet:scarlet:$scarlet_version"
+  implementation "com.tinder.scarlet:stream-adapter-coroutines:$scarlet_version"
+  implementation "com.tinder.scarlet:websocket-okhttp:$scarlet_version"
+  implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'org.mockito:mockito-core:2.24.5'
+  testImplementation "junit:junit:4.12"
+  testImplementation "org.mockito:mockito-core:2.24.5"
 
-  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  androidTestImplementation "androidx.test.ext:junit:1.1.2"
+  androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 }
