--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -18,11 +18,14 @@
   },
   "dependencies": {
     "appium-adb": "^8.7.3",
+    "googleapis": "^64.0.0",
     "fastify": "^3.7.0",
     "fastify-cli": "^2.5.1",
     "fastify-formbody": "^5.0.0",
     "fastify-static": "^3.3.0",
     "fastify-websocket": "^2.0.10",
+    "node-fetch": "^3.0.0-beta.9",
+    "proposal-temporal": "^0.5.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
