Set up storage layer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
     "javascript/controller/src/**/*.d.ts": true,
     "javascript/deploy/src/**/*.d.ts": true,
     "javascript/iterators/src/**/*.d.ts": true,
-    "javascript/server/src/**/*.d.ts": true
+    "javascript/server/src/**/*.d.ts": true,
+    "javascript/storage/src/**/*.d.ts": true
   },
   "editor.formatOnSave": true,
   "search.exclude": {
