--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -26,7 +26,10 @@
     "fastify-websocket": "^2.0.10",
     "node-fetch": "^3.0.0-beta.9",
     "proposal-temporal": "^0.5.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "sql-template-strings": "^2.2.2",
+    "sqlite": "^4.0.17",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@cell-wall/android-bridge": "*",
