--- a/javascript/server/assets/js/tsconfig.json
+++ b/javascript/server/assets/js/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "noEmit": true
   },
   "include": ["**/*.js", "**/*.ts"]
 }
