--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="com.tigeroakes.cellwallclient">
+  package="com.tigeroakes.cellwall.client">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,7 @@
     android:theme="@style/AppTheme"
     tools:ignore="GoogleAppIndexingWarning">
     <activity
-      android:name=".ui.login.LoginActivity"
+      android:name="com.tigeroakes.cellwall.client.ui.login.LoginActivity"
       android:label="@string/title_activity_login"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
@@ -22,19 +22,19 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
       <intent-filter>
-        <action android:name="com.tigeroakes.cellwallclient.LOGIN" />
+        <action android:name="com.tigeroakes.cellwall.client.LOGIN" />
         <category android:name="android.intent.category.DEFAULT" />
         <data android:scheme="http" />
         <data android:scheme="https" />
       </intent-filter>
     </activity>
     <activity
-      android:name=".ui.MainActivity"
+      android:name="com.tigeroakes.cellwall.client.ui.MainActivity"
       android:label="@string/app_name_main"
       android:launchMode="singleTop"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
-        <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
+        <action android:name="com.tigeroakes.cellwall.client.DISPLAY" />
         <category android:name="android.intent.category.DEFAULT" />
         <data android:scheme="cellwall" />
         <data android:scheme="http" />
