--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,10 @@ buildscript {
     geckoview_version = '82.0.20201108180448'
     kotlin_version = '1.4.10'
     coroutines_version = '1.4.1'
+    appcompat_version = '1.2.0'
+    core_version = '1.5.0-alpha05'
     nav_version = '2.3.1'
+    material_version = '1.2.1'
     datastore_version = '1.0.0-alpha02'
     lifecycle_version = '2.3.0-beta01'
     scarlet_version = '0.1.11'
