--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,22 +40,19 @@ android {
 }
 
 dependencies {
-  implementation "com.google.android.material:material:1.2.1"
+  implementation "com.google.android.material:material:$material_version"
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-  implementation "androidx.appcompat:appcompat:1.2.0"
-  implementation "androidx.core:core-ktx:1.5.0-alpha05"
+  implementation "androidx.appcompat:appcompat:$appcompat_version"
+  implementation "androidx.core:core-ktx:$core_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
   implementation "com.github.tfcporciuncula.flow-preferences:flow-preferences:1.3.3"
   implementation "com.squareup.retrofit2:retrofit:2.9.0"
-  implementation "com.tinder.scarlet:scarlet:$scarlet_version"
-  implementation "com.tinder.scarlet:stream-adapter-coroutines:$scarlet_version"
-  implementation "com.tinder.scarlet:websocket-okhttp:$scarlet_version"
   implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
   testImplementation "junit:junit:4.12"
