--- a/javascript/tsconfig.base.json
+++ b/javascript/tsconfig.base.json
@@ -11,6 +11,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true
