--- a/javascript/controller/package.json
+++ b/javascript/controller/package.json
@@ -9,19 +9,18 @@
     "format": "prettier **/*.json **/*.ts --write",
     "test": "svelte-check"
   },
-  "dependencies": {
-    "@cell-wall/cells": "*",
-    "svelte": "^3.29.7"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@tsconfig/svelte": "^1.0.0",
+    "@cell-wall/cells": "*",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "ava": "^3.13.0",
+    "lodash-es": "^4.17.15",
     "prettier": "^2.1.2",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
+    "svelte": "^3.29.7",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
