--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -17,6 +17,7 @@
     "test": "ava"
   },
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^2.1.1",
     "appium-adb": "^8.7.3",
     "googleapis": "^64.0.0",
     "fastify": "^3.7.0",
