--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -24,7 +24,9 @@
     "fastify-cli": "^2.5.1",
     "fastify-formbody": "^5.0.0",
     "fastify-static": "^3.3.0",
+    "fastify-sensible": "^3.0.1",
     "fastify-websocket": "^2.0.10",
+    "jimp": "^0.16.1",
     "node-fetch": "^3.0.0-beta.9",
     "proposal-temporal": "^0.5.0",
     "socket.io": "^2.3.0",
