--- a/javascript/cells/src/tsconfig.json
+++ b/javascript/cells/src/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "include": ["*"],
   "compilerOptions": {
-    "module": "esnext"
+    "module": "esnext",
+    "noFallthroughCasesInSwitch": false
   }
 }
