--- a/javascript/controller/package.json
+++ b/javascript/controller/package.json
@@ -12,6 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "@cell-wall/cells": "*",
+    "@cell-wall/iterators": "*",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
