--- a/javascript/types-appium-adb/package.json
+++ b/javascript/types-appium-adb/package.json
@@ -8,7 +8,8 @@
     "test": "tsc"
   },
   "dependencies": {
-    "@types/node": "^14.14.6"
+    "@types/node": "^14.14.6",
+    "@types/semver": "^7.3.4"
   },
   "devDependencies": {
     "prettier": "^2.1.2",
