--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,7 @@ android {
   buildTypes {
     debug {
       minifyEnabled true
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
     }
     release {
       minifyEnabled true
@@ -55,9 +56,12 @@ dependencies {
   implementation "com.squareup.retrofit2:retrofit:2.9.0"
   implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
-  testImplementation "junit:junit:4.12"
+  testImplementation "junit:junit:4.13.1"
   testImplementation "org.mockito:mockito-core:2.24.5"
 
-  androidTestImplementation "androidx.test.ext:junit:1.1.2"
+  androidTestImplementation "androidx.test:core-ktx:1.3.0"
+  androidTestImplementation "androidx.test:runner:1.3.0"
+  androidTestImplementation "androidx.test:rules:1.3.0"
+  androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
   androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 }
