--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:name="com.tigeroakes.cellwall.client.ui.MainActivity"
       android:label="@string/app_name_main"
       android:launchMode="singleTop"
-      android:theme="@style/AppTheme.NoActionBar">
+      android:theme="@style/AppTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
