--- a/javascript/cells/package.json
+++ b/javascript/cells/package.json
@@ -18,7 +18,7 @@
     "ajv": "^6.12.2",
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
-    "typescript": "4.1.0-beta"
+    "typescript": "4.1.2"
   },
   "files": [
     "src"
