--- a/javascript/controller/package.json
+++ b/javascript/controller/package.json
@@ -9,7 +9,6 @@
     "format": "prettier **/*.json **/*.ts --write",
     "test": "svelte-check"
   },
-  "dependencies": {},
   "devDependencies": {
     "@cell-wall/cells": "*",
     "@cell-wall/iterators": "*",
@@ -21,12 +20,12 @@
     "lodash-es": "^4.17.15",
     "prettier": "^2.1.2",
     "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^6.0.0",
-    "svelte": "^3.29.7",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "svelte": "^3.31.0",
+    "svelte-check": "^1.1.19",
+    "svelte-preprocess": "^4.6.1",
     "tslib": "^2.0.0",
-    "typescript": "4.1.0-beta"
+    "typescript": "4.1.2"
   },
   "files": [
     "src"
