--- a/javascript/deploy/package.json
+++ b/javascript/deploy/package.json
@@ -17,7 +17,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.1",
-    "typescript": "4.1.0-beta",
+    "typescript": "4.1.2",
     "yargs-parser": "^20.2.3"
   },
   "files": [
