--- a/javascript/iterators/package.json
+++ b/javascript/iterators/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
-    "typescript": "4.1.0-beta"
+    "typescript": "4.1.2"
   },
   "files": [
     "src"
