--- a/javascript/storage/package.json
+++ b/javascript/storage/package.json
@@ -12,15 +12,15 @@
     "test": "ava"
   },
   "dependencies": {
-    "tslib": "^2.0.1",
     "sql-template-strings": "^2.2.2",
     "sqlite": "^4.0.17",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
-    "typescript": "4.1.0-beta"
+    "typescript": "4.1.2"
   },
   "files": [
     "src"
