--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,8 @@ dependencies {
   implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
   testImplementation "junit:junit:4.13.1"
-  testImplementation "org.mockito:mockito-core:2.24.5"
+  testImplementation "io.mockk:mockk:1.10.3-jdk8"
+  testImplementation 'org.robolectric:robolectric:4.4'
 
   androidTestImplementation "androidx.test:core-ktx:1.3.0"
   androidTestImplementation "androidx.test:runner:1.3.0"
