--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,12 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - run: ./gradlew lintDebug
+        working-directory: ./android
+      - uses: actions/upload-artifact@v2
+        with:
+          name: lint-results
+          path: android/app/build/reports/lint-results-debug.html
       - run: ./gradlew testDebugUnitTest
         working-directory: ./android
 
