--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
   testImplementation "junit:junit:4.13.1"
   testImplementation "io.mockk:mockk:1.10.3-jdk8"
   testImplementation 'org.robolectric:robolectric:4.4'
+  testImplementation "androidx.test:core-ktx:1.3.0"
+  testImplementation "androidx.test:runner:1.3.0"
+  testImplementation "androidx.test.ext:junit-ktx:1.1.2"
 
   androidTestImplementation "androidx.test:core-ktx:1.3.0"
   androidTestImplementation "androidx.test:runner:1.3.0"
