--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,21 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '15'
-      - uses: pnpm/action-setup@v1.2.1
+
+      - name: pnpm cache
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      - name: pnpm install
+        uses: pnpm/action-setup@v1.2.1
+        if: steps.cache.outputs.cache-hit != 'true'
         with:
           version: 5.13.5
           run_install: |
             - recursive: true
+
       - run: pnpm recursive test
