--- a/javascript/deploy/package.json
+++ b/javascript/deploy/package.json
@@ -15,12 +15,14 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "prettier": "^2.1.2",
-    "rollup": "^2.33.1",
-    "typescript": "4.1.2",
-    "yargs-parser": "^20.2.3"
+    "rollup": "^2.35.1",
+    "yargs-parser": "^20.2.4"
   },
   "files": [
     "src"
-  ]
+  ],
+  "devDependencies": {
+    "prettier": "^2.2.1",
+    "typescript": "4.1.3"
+  }
 }
