--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -21,18 +21,18 @@
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "appium-adb": "^8.9.2",
     "fastify": "^3.9.2",
-    "fastify-cli": "^2.6.0",
+    "fastify-cli": "^2.7.0",
     "fastify-formbody": "^5.0.0",
     "fastify-sensible": "^3.1.0",
     "fastify-static": "^3.3.0",
+    "fastify-swagger": "^3.5.0",
     "fastify-websocket": "^2.0.11",
-    "googleapis": "^64.0.0",
+    "googleapis": "^66.0.0",
     "jimp": "^0.16.1",
     "node-fetch": "^3.0.0-beta.9",
-    "proposal-temporal": "^0.5.0",
-    "socket.io": "^2.3.0",
+    "proposal-temporal": "^0.6.0",
     "sql-template-strings": "^2.2.2",
-    "sqlite": "^4.0.18",
+    "sqlite": "^4.0.19",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
@@ -44,9 +44,6 @@
     "@cell-wall/split-image": "*",
     "@cell-wall/storage": "*",
     "@types/appium-adb": "*",
-    "@types/socket.io": "^2.1.12",
-    "@types/ws": "^5.1.2",
-    "@types/yargs-parser": "^15.0.0",
     "ava": "^3.14.0",
     "prettier": "^2.2.1",
     "tslib": "^2.0.3",
