--- a/javascript/types-appium-adb/package.json
+++ b/javascript/types-appium-adb/package.json
@@ -8,10 +8,11 @@
     "test": "tsc"
   },
   "dependencies": {
-    "@types/node": "^14.14.16",
+    "@types/node": "^14.14.19",
     "@types/semver": "^7.3.4"
   },
   "devDependencies": {
+    "@types/ws": "^7.4.0",
     "prettier": "^2.2.1",
     "typescript": "4.1.3"
   }
