--- a/javascript/cells/package.json
+++ b/javascript/cells/package.json
@@ -16,6 +16,7 @@
     "tslib": "^2.0.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.19",
     "ajv": "^7.0.3",
     "ava": "^3.15.0",
     "prettier": "^2.2.1",
