--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -26,7 +26,6 @@
     "fastify-sensible": "^3.1.0",
     "fastify-static": "^3.3.0",
     "fastify-swagger": "^3.5.0",
-    "fastify-websocket": "^2.0.11",
     "googleapis": "^66.0.0",
     "jimp": "^0.16.1",
     "node-fetch": "^3.0.0-beta.9",
@@ -44,8 +43,10 @@
     "@cell-wall/split-image": "*",
     "@cell-wall/storage": "*",
     "@types/appium-adb": "*",
+    "@types/sinon": "^9.0.10",
     "ava": "^3.14.0",
     "prettier": "^2.2.1",
+    "sinon": "^9.2.2",
     "tslib": "^2.0.3",
     "typescript": "4.1.3"
   },
