--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "streetsidesoftware.code-spell-checker"
+    "svelte.svelte-vscode"
   ]
 }
