--- a/javascript/android-bridge/package.json
+++ b/javascript/android-bridge/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@cell-wall/iterators": "*",
     "@types/appium-adb": "*",
-    "appium-adb": "^8.9.2",
-    "tslib": "^2.0.3"
+    "appium-adb": "^8.14.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "ava": "^3.15.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
