--- a/javascript/cells/package.json
+++ b/javascript/cells/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@cell-wall/iterators": "*",
-    "tslib": "^2.0.3"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.19",
-    "ajv": "^7.0.3",
+    "@types/node": "^16.9.1",
+    "ajv": "^8.6.3",
     "ava": "^3.15.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
