--- a/javascript/deploy/package.json
+++ b/javascript/deploy/package.json
@@ -12,17 +12,17 @@
     "format": "prettier *.json --write"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "rollup": "^2.35.1",
-    "yargs-parser": "^20.2.4"
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "rollup": "^2.56.3",
+    "yargs-parser": "^20.2.9"
   },
   "files": [
     "src"
   ],
   "devDependencies": {
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   }
 }
