--- a/javascript/iterators/package.json
+++ b/javascript/iterators/package.json
@@ -12,12 +12,12 @@
     "test": "ava"
   },
   "dependencies": {
-    "tslib": "^2.0.3"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "ava": "^3.15.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
