--- a/javascript/remote/package.json
+++ b/javascript/remote/package.json
@@ -12,20 +12,20 @@
   "devDependencies": {
     "@cell-wall/cells": "*",
     "@cell-wall/iterators": "*",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@types/lodash-es": "^4.17.4",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/lodash-es": "^4.17.5",
     "ava": "^3.15.0",
-    "lodash-es": "^4.17.20",
-    "prettier": "^2.2.1",
-    "rollup": "^2.35.1",
-    "rollup-plugin-svelte": "^7.0.0",
-    "svelte": "^3.31.1",
-    "svelte-check": "^1.1.24",
-    "svelte-preprocess": "^4.6.1",
-    "tslib": "^2.0.3",
-    "typescript": "4.1.3"
+    "lodash-es": "^4.17.21",
+    "prettier": "~2.4.0",
+    "rollup": "^2.56.3",
+    "rollup-plugin-svelte": "^7.1.0",
+    "svelte": "^3.42.5",
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.9.4",
+    "tslib": "^2.3.1",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
