--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -18,21 +18,21 @@
     "test": "ava"
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^2.2.1",
-    "appium-adb": "^8.9.2",
-    "fastify": "^3.9.2",
-    "fastify-cli": "^2.7.0",
-    "fastify-formbody": "^5.0.0",
-    "fastify-sensible": "^3.1.0",
-    "fastify-static": "^3.3.0",
-    "fastify-swagger": "^3.5.0",
-    "googleapis": "^66.0.0",
+    "@js-temporal/polyfill": "^0.2.0",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
+    "appium-adb": "^8.14.0",
+    "fastify": "^3.21.1",
+    "fastify-cli": "^2.13.0",
+    "fastify-formbody": "^5.1.0",
+    "fastify-sensible": "^3.1.1",
+    "fastify-static": "^4.2.3",
+    "fastify-swagger": "^4.11.0",
+    "googleapis": "^85.0.0",
     "jimp": "^0.16.1",
-    "node-fetch": "^3.0.0-beta.9",
-    "proposal-temporal": "^0.6.0",
+    "node-fetch": "^3.0.0",
     "sql-template-strings": "^2.2.2",
-    "sqlite": "^4.0.19",
-    "sqlite3": "^5.0.0"
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@cell-wall/android-bridge": "*",
@@ -43,12 +43,12 @@
     "@cell-wall/split-image": "*",
     "@cell-wall/storage": "*",
     "@types/appium-adb": "*",
-    "@types/sinon": "^9.0.10",
-    "ava": "^3.14.0",
-    "prettier": "^2.2.1",
-    "sinon": "^9.2.2",
-    "tslib": "^2.0.3",
-    "typescript": "4.1.3"
+    "@types/sinon": "^10.0.2",
+    "ava": "^3.15.0",
+    "prettier": "~2.4.0",
+    "sinon": "^11.1.2",
+    "tslib": "^2.3.1",
+    "typescript": "~4.4.3"
   },
   "files": [
     "assets",
