--- a/javascript/split-image/package.json
+++ b/javascript/split-image/package.json
@@ -15,12 +15,12 @@
     "@cell-wall/cells": "*",
     "@cell-wall/iterators": "*",
     "jimp": "^0.16.1",
-    "tslib": "^2.0.3"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "ava": "^3.15.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
