--- a/javascript/storage/package.json
+++ b/javascript/storage/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "sql-template-strings": "^2.2.2",
-    "sqlite": "^4.0.19",
-    "sqlite3": "^5.0.0",
-    "tslib": "^2.0.3"
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "ava": "^3.15.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   },
   "files": [
     "src"
