--- a/javascript/types-appium-adb/package.json
+++ b/javascript/types-appium-adb/package.json
@@ -8,12 +8,12 @@
     "test": "tsc"
   },
   "dependencies": {
-    "@types/node": "^14.14.19",
-    "@types/semver": "^7.3.4"
+    "@types/node": "^16.9.1",
+    "@types/semver": "^7.3.8"
   },
   "devDependencies": {
-    "@types/ws": "^7.4.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
+    "@types/ws": "^7.4.7",
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
   }
 }
