--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start": "node javascript/server"
   },
   "devDependencies": {
-    "prettier": "^2.2.1",
-    "typescript": "4.1.3"
-  },
-  "dependencies": {}
+    "prettier": "~2.4.0",
+    "typescript": "~4.4.3"
+  }
 }
