--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,9 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@js-temporal/polyfill": "^0.2.0",
+		"googleapis": "^85.0.0"
+	}
 }
