--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@cell-wall/server2",
 	"version": "4.0.0",
+	"type": "module",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -8,26 +9,9 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"test": "jest"
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.48",
-		"@sveltejs/kit": "next",
-		"@types/lodash.startcase": "^4.4.6",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"prettier": "~2.4.0",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.42.5",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
-	},
-	"type": "module",
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
 		"appium-adb": "^8.14.0",
@@ -36,5 +20,29 @@
 		"sql-template-strings": "^2.2.2",
 		"sqlite": "^4.0.23",
 		"sqlite3": "^5.0.2"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.48",
+		"@sveltejs/kit": "next",
+		"@types/lodash.startcase": "^4.4.6",
+		"@typescript-eslint/eslint-plugin": "^4.31.1",
+		"@typescript-eslint/parser": "^4.31.1",
+		"esbuild-jest": "^0.5.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"jest": "^27.2.0",
+		"prettier": "~2.4.0",
+		"prettier-plugin-svelte": "^2.4.0",
+		"svelte": "^3.42.5",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.9.4",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.3"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.tsx?$": "esbuild-jest"
+		}
 	}
 }
