--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
 		"@sveltejs/adapter-node": "^1.0.0-next.48",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
+		"@types/node": "^16.9.2",
+		"@types/semver": "^7.3.8",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"esbuild-jest": "^0.5.0",
