--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -25,8 +25,10 @@
 		"checkJs": true,
 		"paths": {
 			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"]
-		}
+			"$lib/*": ["src/lib/*"],
+			"appium-adb": ["types/appium-adb"]
+		},
+		"typeRoots": ["**/node_modules/@types", "./@types"]
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
