--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
 		"appium-adb": "^8.14.0",
-		"googleapis": "^85.0.0",
+		"googleapis": "^87.0.0",
 		"lodash.startcase": "^4.4.0",
 		"lowdb": "^3.0.0",
 		"sql-template-strings": "^2.2.2",
@@ -23,23 +23,23 @@
 		"sqlite3": "^5.0.2"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.48",
+		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
-		"@types/node": "^16.9.2",
+		"@types/node": "^16.9.6",
 		"@types/semver": "^7.3.8",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
 		"esbuild-jest": "^0.5.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.2.0",
-		"prettier": "~2.4.0",
+		"jest": "^27.2.1",
+		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.42.5",
+		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.4",
+		"svelte-preprocess": "^4.9.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	}
