--- a/server/package.json
+++ b/server/package.json
@@ -14,19 +14,16 @@
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
-		"appium-adb": "^8.14.0",
+		"appium-adb": "^8.15.0",
 		"googleapis": "^87.0.0",
 		"lodash.startcase": "^4.4.0",
-		"lowdb": "^3.0.0",
-		"sql-template-strings": "^2.2.2",
-		"sqlite": "^4.0.23",
-		"sqlite3": "^5.0.2"
+		"lowdb": "^3.0.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
-		"@types/node": "^16.9.6",
+		"@types/node": "^16.10.1",
 		"@types/semver": "^7.3.8",
 		"@typescript-eslint/eslint-plugin": "^4.31.2",
 		"@typescript-eslint/parser": "^4.31.2",
@@ -34,7 +31,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.2.1",
+		"jest": "^27.2.2",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.43.0",
