--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
 		"appium-adb": "^8.15.0",
+		"dotenv": "^10.0.0",
 		"googleapis": "^87.0.0",
 		"lodash.startcase": "^4.4.0",
 		"lowdb": "^3.0.0"
