--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,7 @@
 		"appium-adb": "^8.16.0",
 		"dotenv": "^10.0.0",
 		"googleapis": "^87.0.0",
-		"lodash.startcase": "^4.4.0",
-		"lowdb": "^3.0.0"
+		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
@@ -34,6 +33,7 @@
 		"eslint-plugin-svelte3": "^3.2.1",
 		"jest": "^27.2.3",
 		"prettier": "~2.4.1",
+		"lowdb": "^3.0.0",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.43.0",
 		"svelte-check": "^2.2.6",
