--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -30,5 +30,5 @@
 		},
 		"typeRoots": ["**/node_modules/@types", "./@types"]
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte"]
 }
