--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: "temurin"
+          java-version: "11"
       - run: ./gradlew lintDebug
         working-directory: ./android
       - uses: actions/upload-artifact@v2
