Add code to install apk

--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
+		"@octokit/core": "^3.5.1",
 		"appium-adb": "^8.16.1",
 		"dotenv": "^10.0.0",
 		"googleapis": "^88.2.0",
 		"jimp": "^0.16.1",
 		"lodash.startcase": "^4.4.0",
 		"lowdb": "^3.0.0",
+		"node-fetch": "^3.0.0",
 		"polka": "^0.5.2",
 		"ws": "^8.2.3"
 	},
@@ -32,8 +34,8 @@
 		"@types/polka": "^0.5.3",
 		"@types/semver": "^7.3.8",
 		"@types/ws": "^8.2.0",
-		"@typescript-eslint/eslint-plugin": "^4.32.0",
-		"@typescript-eslint/parser": "^4.32.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
 		"esbuild-jest": "^0.5.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
