--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,12 @@
 {
-	"name": "@cell-wall/server",
+	"name": "@cell-wall/client",
 	"version": "4.0.0",
 	"type": "module",
+	"exports": {
+		"*": {
+			"import": "./build/middlewares.js"
+		}
+	},
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -13,24 +18,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@cell-wall/client": "workspace:*",
 		"@js-temporal/polyfill": "^0.2.0",
-		"@octokit/core": "^3.5.1",
-		"appium-adb": "^8.16.1",
 		"dotenv": "^10.0.0",
-		"fastify": "^3.22.0",
-		"googleapis": "^88.2.0",
-		"jimp": "^0.16.1",
-		"lowdb": "^3.0.0",
-		"middie": "^5.3.0",
-		"node-fetch": "^3.0.0",
-		"ws": "^8.2.3"
+		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
 		"@jest/globals": "^27.2.4",
+		"@sveltejs/adapter-node": "next",
+		"@sveltejs/kit": "next",
+		"@types/lodash.startcase": "^4.4.6",
 		"@types/node": "^16.10.2",
-		"@types/semver": "^7.3.8",
-		"@types/teen_process": "^1.16.0",
 		"@types/ws": "^8.2.0",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
@@ -38,6 +35,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"googleapis": "^88.2.0",
 		"jest": "^27.2.4",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
