--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
 	"name": "@cell-wall/client",
 	"version": "4.0.0",
 	"type": "module",
+	"types": "index.d.ts",
 	"exports": {
 		"*": {
 			"import": "./build/middlewares.js"
@@ -19,6 +20,7 @@
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
+		"@types/connect": "^3.4.35",
 		"dotenv": "^10.0.0",
 		"lodash.startcase": "^4.4.0"
 	},
