--- a/client/package.json
+++ b/client/package.json
@@ -21,30 +21,30 @@
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
 		"@types/connect": "^3.4.35",
-		"dotenv": "^10.0.0",
-		"lodash.startcase": "^4.4.0"
+		"dotenv": "^10.0.0"
 	},
 	"devDependencies": {
-		"@jest/globals": "^27.2.4",
+		"@jest/globals": "^27.2.5",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
-		"@types/node": "^16.10.2",
+		"@types/node": "^16.10.9",
 		"@types/ws": "^8.2.0",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
 		"esbuild-jest": "^0.5.0",
-		"eslint": "^7.32.0",
+		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"googleapis": "^88.2.0",
-		"jest": "^27.2.4",
+		"jest": "^27.2.5",
+		"lodash.startcase": "^4.4.0",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.43.1",
-		"svelte-check": "^2.2.6",
+		"svelte": "^3.43.2",
+		"svelte-check": "^2.2.7",
 		"svelte-preprocess": "^4.9.8",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.4"
 	}
 }
