--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,16 @@
 	"name": "@cell-wall/server",
 	"version": "4.0.0",
 	"type": "module",
+	"exports": {
+		"*": {
+			"import": "./build/middlewares.js"
+		}
+	},
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"build": "node esbuild.config.js",
+		"preview": "node build/index.js",
+		"check": "tsc --project .",
+		"check:watch": "tsc --project . --watch",
 		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write .",
 		"test": "jest"
@@ -16,7 +20,7 @@
 		"@cell-wall/client": "workspace:*",
 		"@js-temporal/polyfill": "^0.2.0",
 		"@octokit/core": "^3.5.1",
-		"appium-adb": "^8.16.1",
+		"appium-adb": "^8.16.2",
 		"dotenv": "^10.0.0",
 		"fastify": "^3.22.0",
 		"fastify-websocket": "^4.0.0",
@@ -27,21 +31,21 @@
 		"node-fetch": "^3.0.0"
 	},
 	"devDependencies": {
-		"@jest/globals": "^27.2.4",
-		"@types/node": "^16.10.2",
+		"@jest/globals": "^27.2.5",
+		"@types/node": "^16.10.9",
 		"@types/semver": "^7.3.8",
 		"@types/teen_process": "^1.16.0",
 		"@types/ws": "^8.2.0",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"esbuild": "^0.13.6",
 		"esbuild-jest": "^0.5.0",
-		"eslint": "^7.32.0",
+		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.2.4",
+		"jest": "^27.2.5",
 		"prettier": "~2.4.1",
-		"svelte": "^3.43.1",
+		"svelte": "^3.43.2",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.4"
 	}
 }
