--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .prettierignore .",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"test": "jest"
 	},
