--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,8 @@
 	"name": "@cell-wall/server",
 	"version": "4.0.0",
 	"type": "module",
-	"exports": {
-		"*": {
-			"import": "./build/middlewares.js"
-		}
-	},
+	"exports": "./build/index.js",
+	"module": "./build/index.js",
 	"scripts": {
 		"build": "node esbuild.config.js",
 		"preview": "node build/index.js",
